@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3360] Feature: Only list aux records from the GRSP in the FE editor
 - [#3335] Fix: The e-mail function tests need to take forceCharset into account
 - [#3359] Feature: Add a function for reading the current GRSP
 - [#3354] Feature: add findByWhereClause to mapper
